--- a/Menu.html
+++ b/Menu.html
@@ -239,7 +239,7 @@
 <div class="row">
   <div class="column" >
     <h2>GOOEY CHOCOLATE CAKE</h2>
-    <img src="imgs/menu/cak5.jpg" width="200">
+    <img src="imgs/menu/Cak5.jpg" width="200">
     <p>A sumptuous, melt-in-the-mouth cake. Really gooey!</p>
   <p style="font-family: body; color: #bf55ec;">RS 275</p>
   <a style="font-family: body; text-decoration: none;" href="#" data-name="GOOEY CHOCOLATE CAKE" data-price="275" class="add-to-cart btn btn-primary" onclick="myFunction()">Add to Order</a>
@@ -247,7 +247,7 @@
 
   <div class="column" >
     <h2>CARROT AND WALNUT CAKE</h2>
-    <img src="imgs/menu/cak1.jpg" width="200">
+    <img src="imgs/menu/Cak1.jpg" width="200">
     <p>A nourishing cake made with jaggery and farm fresh carrots, full of goodness!</p>
     <p style="font-family: body; color: #bf55ec;">RS 275</p>
     <a style="font-family: body; text-decoration: none;" href="#" data-name="CARROT AND WALNUT CAKE" data-price="275" class="add-to-cart btn btn-primary" onclick="myFunction()">Add to Order</a>
@@ -257,7 +257,7 @@
 <div class="row">
   <div class="column" >
     <h2>SPICED CARROT CAKE WITH MAPLE CREAM CHEESE FROSTING</h2>
-    <img src="imgs/menu/cak2.jpg" width="200">
+    <img src="imgs/menu/Cak2.jpg" width="200">
     <p>Our twist on a classic cake, made with jaggery and farm fresh carrots. Bursting with flavour!</p>
    <p style="font-family: body; color: #bf55ec;">RS 275</p>
    <a style="font-family: body; text-decoration: none;" href="#" data-name="SPICED CARROT CAKE WITH MAPLE CREAM CHEESE FROSTING" data-price="275" class="add-to-cart btn btn-primary" onclick="myFunction()">Add to Order</a>
@@ -265,7 +265,7 @@
 
   <div class="column" >
     <h2>DATE CAKE WITH TOFFEE SAUCE</h2>
-    <img src="imgs/menu/cak3.jpg" width="200">
+    <img src="imgs/menu/Cak3.jpg" width="200">
     <p>A flavourful cake to comfort the heart & soul, served with a warm sauce.</p>
     <p style="font-family: body; color: #bf55ec;">RS 275</p>
     <a style="font-family: body; text-decoration: none;" href="#" data-name="DATE CAKE WITH TOFFEE SAUCE" data-price="275" class="add-to-cart btn btn-primary" onclick="myFunction()">Add to Order</a>
@@ -275,7 +275,7 @@
 <div class="row">
   <div class="column" >
     <h2>LEMON CAKE WITH LEMON SAUCE</h2>
-    <img src="imgs/menu/cak4.jpg" width="200">
+    <img src="imgs/menu/Cak4.jpg" width="200">
     <p>A zingy upbeat cake with a great fresh lemon taste.</p>
   <p style="font-family: body; color: #bf55ec;">RS 275</p>
   <a style="font-family: body; text-decoration: none;" href="#" data-name="LEMON CAKE WITH LEMON SAUCE" data-price="275" class="add-to-cart btn btn-primary" onclick="myFunction()">Add to Order</a>
@@ -283,7 +283,7 @@
 
   <div class="column" >
     <h2>APPLE CINNAMON CAKE</h2>
-    <img src="imgs/menu/cak6.jpg" width="200">
+    <img src="imgs/menu/Cak6.jpg" width="200">
     <p>Our original yummy Apple cake.</p>
     <p style="font-family: body; color: #bf55ec;">RS 275</p>
     <a style="font-family: body; text-decoration: none;" href="#" data-name="APPLE CINNAMON CAKE" data-price="275" class="add-to-cart btn btn-primary" onclick="myFunction()">Add to Order</a>
@@ -293,7 +293,7 @@
 <div class="row">
   <div class="column" >
     <h2>BANANA WALNUT CAKE</h2>
-    <img src="imgs/menu/cak1.jpg" width="200">
+    <img src="imgs/menu/Cak1.jpg" width="200">
     <p>A deliciously wholesome fruit and nut cake.</p>
    <p style="font-family: body; color: #bf55ec;">RS 275</p>
    <a style="font-family: body; text-decoration: none;" href="#" data-name="BANANA WALNUT CAKE" data-price="275" class="add-to-cart btn btn-primary" onclick="myFunction()">Add to Order</a>
@@ -301,7 +301,7 @@
 
   <div class="column" >
     <h2>LEMON CHEESE CAKE</h2>
-    <img src="imgs/menu/cak6.jpg" width="200">
+    <img src="imgs/menu/Cak6.jpg" width="200">
     <p>An amazing lo-cal lemon cheese cake. Start spreading the news...</p>
     <p style="font-family: body; color: #bf55ec;">RS 351</p>
     <a style="font-family: body; text-decoration: none;" href="#" data-name="LEMON CHEESE CAKE" data-price="351" class="add-to-cart btn btn-primary" onclick="myFunction()">Add to Order</a>
@@ -311,7 +311,7 @@
 <div class="row">
 <div class="column" >
     <h2>YOGURT AND MUESLI PARFAIT</h2>
-    <img src="imgs/menu/cak3.jpg" width="200">
+    <img src="imgs/menu/Cak3.jpg" width="200">
     <p>An all time favourite! Don’t miss it, it's also lo-cal.</p>
     <p style="font-family: body; color: #bf55ec;">RS 351</p>
     <a style="font-family: body; text-decoration: none;" href="#" data-name="YOGURT AND MUESLI PARFAIT" data-price="351" class="add-to-cart btn btn-primary" onclick="myFunction()">Add to Order</a>
